# Crypto_Project

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
src/: main.py
src/api/: __init__.py  routes.py
src/api/kdc/: kdc_api.py  websocket.py
src/api/user/: user_api.py
src/api/user/usecases/: __init__.py  login.py  register.py
src/client/: render.py
src/client/static/: board.css  board.js  chat.css  get_public_keys.js  join.js  localstg.js  styles.css
src/client/templates/: base.html  board.html  chat.html  login.html
src/core/: __init__.py  config.py
src/core/middleware/: __init__.py  auth.py
src/core/tools/: RSA.py  __init__.py  math_tools.py
src/db/: __init__.py  database.db  database.py
src/db/migrations/: init.sql
src/db/repositories/: __init__.py  base_repository.py  public_keys_repository.py  user_repository.py
src/schemas/: __init__.py  public_keys.py  user.py
