[tool.poetry]
name = "crypto-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
typer = "^0.12.3"
pydantic-settings = "^2.2.1"
pypika = "^0.48.9"
contractspy = "^1.0.7"
jwt = "^1.3.1"
passlib = "^1.7.4"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
